# fediverse-portability-test-kit

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/workflows/: test.yml
docs/: APPLICATION_DRAFT.md  BADGE_MODEL.md  BUDGET_AND_MILESTONES.md  CHECK_CATALOG.md  CI_INTEGRATION.md  COMPATIBILITY_MATRIX_TEMPLATE.md  EXISTING_EFFORTS.md  FEDIVERSITY_ALIGNMENT.md  FEDIVERSITY_REVIEWER_PATH.md  FINAL_SUBMISSION_CHECKLIST.md  GENAI_DISCLOSURE.md  NLNET_FORM_ANSWERS.md  OUTREACH_MESSAGE.md  PORTABILITY_TEST_MODEL.md  REVIEWER_FAQ.md  ROADMAP_TO_REAL_ADAPTER.md  SERVER_OPERATOR_GUIDE.md  SUBMISSION_PACK.md  USER_BENEFIT_MODEL.md
examples/: demo-output.txt  public-report-summary.md
examples/export-import-fixture/: sample-report.json
schemas/: portability-report.schema.json
src/fediverse_portability_test/: __init__.py  cli.py  report.py
src/fediverse_portability_test/fixtures/: __init__.py  mastodon_like.py
tests/: test_cli.py  test_report_shape.py  test_schema_validation.py
